tests/rosetta/out/Java/9-billion-names-of-god-the-integer.error
javac: exit status 1
/tmp/M9BillionNamesOfGodTheInteger.java:52: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> av = a.get(i);
                                    ^
/tmp/M9BillionNamesOfGodTheInteger.java:57: error: bad operand types for binary operator '-'
            int diff = av - bv - borrow;
                          ^
  first type:  List<Integer>
  second type: int
/tmp/M9BillionNamesOfGodTheInteger.java:74: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)String.valueOf(a.get(i))).doubleValue();
                                           ^
/tmp/M9BillionNamesOfGodTheInteger.java:94: error: incompatible types: Object cannot be converted to List<List<List<Integer>>>
                List<List<List<Integer>>> val = ((List)cache.get(y - x)).get(minInt(x, y - x));
                                                                            ^
/tmp/M9BillionNamesOfGodTheInteger.java:95: error: incompatible types: List<List<List<Integer>>> cannot be converted to List<Integer>
                row.add(bigAdd(row.get(row.size() - 1), val));
                                                        ^
/tmp/M9BillionNamesOfGodTheInteger.java:121: error: incompatible types: String cannot be converted to Number
                line = ((Number)line + " " + ((Number)r.get(i)).doubleValue()).doubleValue() + " ";
                                ^
/tmp/M9BillionNamesOfGodTheInteger.java:121: error: incompatible types: String cannot be converted to Number
                line = ((Number)line + " " + ((Number)r.get(i)).doubleValue()).doubleValue() + " ";
                                                           ^
/tmp/M9BillionNamesOfGodTheInteger.java:131: error: incompatible types: String cannot be converted to Number
            System.out.println(String.valueOf(num) + " " + ((Number)bigToString(r.get(r.size() - 1))).doubleValue());
                                                                               ^
Note: /tmp/M9BillionNamesOfGodTheInteger.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
8 errors
